@@ -14,7 +14,10 @@ function(pattern, x, ignore.case = FALSE, extended = TRUE, perl = FALSE,
             return(rep.int(NA, length(x)))
     }
 
-    if(perl)
+    if(fixed && perl)
+        warning(gettextf("argument '%s' will be ignored", "perl = TRUE"),
+                domain = NA)
+    if(!fixed && perl)
         .Internal(grep.perl(pattern, x, ignore.case, value, useBytes))
     else
         .Internal(grep(pattern, x, ignore.case, extended, value, fixed,
@@ -31,7 +34,10 @@ function(pattern, replacement, x, ignore.case = FALSE, extended = TRUE,
     if (is.na(pattern))
         return(rep.int(NA_character_, length(x)))
 
-    if(perl)
+    if(fixed && perl)
+        warning(gettextf("argument '%s' will be ignored", "perl = TRUE"),
+                domain = NA)
+    if(!fixed && perl)
         .Internal(sub.perl(pattern, replacement, x, ignore.case, useBytes))
     else
         .Internal(sub(pattern, replacement, x, ignore.case,
@@ -48,7 +54,10 @@ function(pattern, replacement, x, ignore.case = FALSE, extended = TRUE,
     if (is.na(pattern))
         return(rep.int(NA_character_, length(x)))
 
-    if(perl)
+    if(fixed && perl)
+        warning(gettextf("argument '%s' will be ignored", "perl = TRUE"),
+                domain = NA)
+    if(!fixed && perl)
         .Internal(gsub.perl(pattern, replacement, x, ignore.case, useBytes))
     else
         .Internal(gsub(pattern, replacement, x, ignore.case,
@@ -61,7 +70,10 @@ function(pattern, text, extended = TRUE, perl = FALSE,
 {
     pattern <- as.character(pattern)
     text <- as.character(text)
-    if(perl)
+    if(fixed && perl)
+        warning(gettextf("argument '%s' will be ignored", "perl = TRUE"),
+                domain = NA)
+    if(!fixed && perl)
         .Internal(regexpr.perl(pattern, text, useBytes))
     else
         .Internal(regexpr(pattern, text, extended, fixed, useBytes))
@@ -73,7 +85,10 @@ function(pattern, text, extended = TRUE, perl = FALSE,
 {
     pattern <- as.character(pattern)
     text <- as.character(text)
-    if(perl)
+    if(fixed && perl)
+        warning(gettextf("argument '%s' will be ignored", "perl = TRUE"),
+                domain = NA)
+    if(!fixed && perl)
       .Internal(gregexpr.perl(pattern, text, useBytes))
     else
       .Internal(gregexpr(pattern, text, extended, fixed, useBytes))
